--- a/lab1/index.html
+++ b/lab1/index.html
@@ -11,12 +11,12 @@
 		<header class="header">
 			<ul class="menu">
 				<div class="wallpaper">
-					<li><a href="#">Home</a></li>
+					<li><a class="active" href="#">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="">Content</a></li>
-					<li><a href="">History of success</a></li>
-					<li><a href="">List of Pudge</a></li>
-					<li><a href="">Another projects</a></li>
+					<li><a href="success.html">History of success</a></li>
+					<li><a href="records.html">Records</a></li>
+					<li><a href="contact.html">Contact</a></li>
+					<li><a href="another.html">Another projects</a></li>
 				</div>
 			</ul>
 		</header>
@@ -37,10 +37,26 @@
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae deleniti cumque, illo eum quaerat exercitationem magnam blanditiis dolore! Soluta a delectus sunt ipsam aut beatae voluptatibus nesciunt ut laboriosam dolorum.</p>
 					</div>
 				</div>
-			</div>		
+			</div>
+			<div style="background: none;" class="block2">
+				<div style="flex-wrap: wrap;" class="container wallpaper">
+					<img src="uploads/photo1.jpg" alt="photo1" />
+					<img src="uploads/photo2.jpg" alt="photo2" />
+					<div style="margin: 20px 10px 30px;" class="text">
+						<p style="color: blue; display: inline-block; font-size: 17px; width: 1200px;">
+							W dzisiejszych czasach ćwiczenia na drążkach zyskują coraz większą popularność, zarówno wśród osób, które trenują siłowo, jak i tych, które uprawiają gimnastykę sportową. Drążki to prosty, ale skuteczny sposób na wzmocnienie mięśni górnej części ciała, zwłaszcza ramion, pleców i brzucha. Wielu ludzi wybiera je do ćwiczeń, ponieważ można z łatwością wykonywać różne warianty podciągnięć oraz elementy gimnastyczne, takie jak muscle-upy, front lever czy back lever. Wzrost liczby zewnętrznych parków do street workoutu dodatkowo ułatwia dostęp do drążków.</p>
+							<form action="POST">
+								<input type="text" name="you" placeholder="tell me why not?" />
+								<button type="submit" name="subscribe" value="sub">Subscribe</button>
+							</form>
+							<p><i>Drążki stają się częścią wielu publicznych siłowni na świeżym powietrzu, co jeszcze bardziej ułatwia dostęp do tego typu treningu i przyciąga nowych entuzjastów sportu. </i>
+							</p>
+					</div>
+				</div>
+			</div>
 		</div>
 		<footer class="footer">
-			<p>FIRESTHORM &copy; 2024</p>
+			<p>RISINGRAY &copy; 2024</p>
 		</footer>
 	</div>
 </body>
