--- a/lab2/records.html
+++ b/lab2/records.html
@@ -5,8 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="main.css">
+	<script src="scripts/timedate.js" type="text/javascript"></script>
 </head>
-<body>
+<body onload="startclock()">
 	<div style="background: url(uploads/sky.jpg) no-repeat center; background-size: 110%; flex: 1;" id="page">
 		<header class="header">
 			<ul class="menu">
@@ -17,6 +18,10 @@
 					<li><a class="active" href="#">Records</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="another.html">Another projects</a></li>
+					<div class="dataczas">
+						<a href="https://www.timeanddate.com/worldclock/poland"><div id="zegarek"></div>
+						<div id="data"></div></a>
+					</div>
 				</div>
 			</ul>
 		</header>
